objects/EUR_CRM_Image_Level_Threshold__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Group_Outlet_Type__c</fullName>
        <label>Group Outlet Type</label>
        <referenceTo>EUR_CRM_Group_Outlet_Type__c</referenceTo>
        <relationshipName>EUR_Image_Level_Thresholds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Id__c</fullName>
        <formula>EUR_CRM_Image_Level__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level_Name__c</fullName>
        <formula>TEXT(EUR_CRM_Image_Level__r.EUR_CRM_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level__c</fullName>
        <label>Image Level</label>
        <referenceTo>EUR_CRM_Image_Level__c</referenceTo>
        <relationshipName>EUR_Image_Level_Thresholds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Weight_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Weight Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Min_Weight__c</fullName>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                    <default>true</default>
                    <label>Mainstream</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EUR Image Level Threshold (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>Name__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DK_Image_Level_Threshold_EU</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>DKK</value>
        </filters>
        <label>DK Image Level Threshold (EU)</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Image_Level_Threshold_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>Name__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>BGN</value>
        </filters>
        <label>EUR BG All Image Level Threshold View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_CH_Image_Level_Threshold</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>CHF</value>
        </filters>
        <label>EUR CH Image Level Threshold</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_FI_Image_Level_Threshold</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <label>EUR FI Image Level Threshold</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_MA_Image_Level_Threshold</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>MAD</value>
        </filters>
        <label>EUR MA Image Level Threshold</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRH_PR_EMEA</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_PT_All_Image_Level_Threshold_View</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>Name__c</columns>
        <columns>EUR_CRM_Name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>EUR</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Laputa Admin</value>
        </filters>
        <label>EUR PT All Image Level Threshold View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_Image_Level_Threshold</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Group_Outlet_Type__c</columns>
        <columns>EUR_CRM_Image_Level__c</columns>
        <columns>EUR_CRM_Image_Level_Id__c</columns>
        <columns>EUR_CRM_Image_Level_Name__c</columns>
        <columns>EUR_CRM_Is_Weight_Changed__c</columns>
        <columns>EUR_CRM_Min_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>ZAR</value>
        </filters>
        <label>EUR ΖΑ Image Level Threshold</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ILT-{0000}</displayFormat>
        <label>EUR Image Level Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EUR Image Level Threshold (EU)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>